      LINTIAN_ROOT than the one lintian expected to use.
  * frontend/lintian-info:
    + [NT] Replace with symlink to dplint.  The implementation of
      lintian-info is now handled by commands/info.

  * lib/Lintian/Data.pm:
    + [NT] Make a special case to allow "original-maintainer" by
      default in all non-"Debian" profiles.  Thanks to Nick
      Black for the report.  (Closes: #697565)

  * reporting/harness:
    + [NT] Fix bug that caused harness to not remove old log
      entries on incremental runs.
    + [NT] Clear LINTIAN_ROOT environment variable if set.
  * reporting/html_reports:
    + [NT] Copy (rather than symlink) the lintian.log to the
      generated website.

  * t/tests/legacy-debug/debian/debian/control:
    + [NT] Mark some packages "arch:any" to avoid test failures
      on kfreebsd-amd64.  (Closes: #688524)

  * testset/*:
    + [NT] All tests moved to t/tests/legacy-* and the test
      runner removed.

  * vendors/ubuntu/main/data/{common,fields}/*:
    + [NT] Retire now redundant files.

 -- Niels Thykier <niels@thykier.net>  Tue, 26 Aug 2013 08:19:50 +0200

lintian (2.5.17) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - apache2-unparsable-dependency
      - deprecated-configure-filename
      - doc-base-abstract-field-separator-extra-whitespace
      - doc-base-abstract-might-contain-extra-leading-whitespace
      - doc-base-file-separator-extra-whitespace
      - md5sums-lists-nonexistent-file
      - non-multi-arch-lib-dir
      - pkg-config-multi-arch-wrong-dir
    + Removed:
      - apache2-unparseable-dependency
      - doc-base-abstract-field-separator-extra-whitespaces
      - doc-base-abstract-might-contain-extra-leading-whitespaces
      - doc-base-file-separator-extra-whitespaces
      - md5sums-lists-nonexisting-file

  * checks/apache2.{desc,pm}:
    + [JW,NT] Rename a tag for consistent spelling of
      "unparsable" in tag names.  The tag has no known
      overrides.